packages/preview/modern-hsh-thesis/1.1.2/CHANGELOG.md
# [v1.1.2](https://github.com/MrToWy/hsh-thesis/releases/tag/v1.1.2)
## Added
- Added `custom-logo1` & `custom-logo2` parameter to allow changing the logos on the first page.
- Added `prof-title` & 'second-prof-title' parameter to allow changing the title of the professors on the first page.

# [v1.1.1](https://github.com/MrToWy/hsh-thesis/releases/tag/v1.1.1)
## Added
- Added `justify-title` parameter to allow for disabling the justification of the title.

## Changed
- Parameter `title` can now be a string or content. Content is useful if you want to use a custom size or color for the title.

# [v1.1.0](https://github.com/MrToWy/hsh-thesis/releases/tag/v1.1.0)
## Added
- Added `custom-declaration-of-independence` parameter to allow for a custom declaration of independence.

## Changed
- Upgraded codly to 1.3.0

# [v1.0.2](https://github.com/MrToWy/hsh-thesis/releases/tag/v1.0.2)
## Changed
- Upgraded Typst to version 0.13
- Upgraded treet to version 0.1.1
- Upgraded gentle-clues to 1.2.0
- Upgraded wrap-it to 0.1.1
- Upgraded Hydra to 0.6.0
- Upgraded codly to 1.2.0

## Misc
- Added "Use Git Bash Console" info to readme
- Added .gitignore
- Added CONTRIBUTING.md


# [v1.0.1](https://github.com/MrToWy/hsh-thesis/releases/tag/v1.0.1)
## Added
- Optional Parameter `chapter-break-mode` to control whether a new chapter should start on a new page.


## Changed
- Upgraded Typst to version 0.12
- Upgraded Hydra to 0.5.1

## Removed
- get-current-heading (instead use get-current-heading-hydra)

## Misc
- Added "Just" install step to readme


---

# [v1.0.0](https://github.com/MrToWy/hsh-thesis/releases/tag/v1.0.0)
Initial Release